# sys_monitor

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  metrics.rs  tray.rs
