[package]
name = "sys_monitor"
version = "0.1.0"
description = "Lightweight system monitor for GNOME top panel"
authors = ["you"]
edition = "2021"

[lib]
name = "sys_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
